better scaling images/logo for homepage/aboutpage

--- a/about.html
+++ b/about.html
@@ -222,75 +222,85 @@
           </ul>
         </div>
       </nav>
-
-      <div
-        id="about-us-image"
-        style="height: 209vh"
-        class="container-fluid p-0 mb-0"
-      >
-        <div class="container-lg" style="height: 100vh"></div>
-        <div class="container-lg">
-          <div class="row mt-4">
-            <div class="col">
-              <h1 class="text-center text-white" style="font-weight: bold">
-                About Us
-              </h1>
-            </div>
+      <div class="container-fluid" id="about-us-image" style="height: 115vh">
+        <div class="row justify-content-center h-100" style="margin: auto">
+          <div class="col-auto">
+            <img src="images/ABOUTUSPNG.png" class="img-fluid" alt="" />
           </div>
-          <div class="row mt-4">
-            <div class="col">
-              <h5 class="text-center text-white">
-                Celestials is an up and coming eSports Organization that is
-                focused on Competitive Gaming and creating Cutting Edge Content,
-                Merchandise, and Community Events. Celestials was formed with
-                the goal of Uniting Aspiring Content Creators with Competitive
-                Mindsets. Celestials wants to become synonymous with a winning
-                culture and quality content for our community. Celestials is
-                going to compete in World of Warcraft Raiding, Mythic Plus, PvP,
-                League of Legends, and Valorant.
-              </h5>
-            </div>
-          </div>
-          <div class="row mt-4">
-            <div class="col">
-              <h5 class="text-center text-white">
-                World of Warcraft: Dragonflight is launching on Nov 28th and
-                Celestials Guild is recruiting! We are looking for outstanding
-                players in the following Categories:
-              </h5>
-            </div>
-          </div>
-          <div class="row mt-3">
-            <div class="row">
-              <div class="col text-center text-white">
-                <h5>Mythic Raiding</h5>
+        </div>
+      </div>
+      <div class="container-fluid" style="height: 950px" id="about-us-image">
+        <div class="row">
+          <div class="col">
+            <div class="container-lg">
+              <div class="row mt-5">
+                <div class="col">
+                  <h1 class="text-center text-white" style="font-weight: bold">
+                    About Us
+                  </h1>
+                </div>
               </div>
-            </div>
-            <div class="row">
-              <div class="col text-center text-white"><h5>Mythic Plus</h5></div>
-            </div>
-            <div class="row">
-              <div class="col text-center text-white"><h5>3v3 Arena</h5></div>
-            </div>
-          </div>
-          <div class="row mt-4">
-            <div class="col text-center text-white">
-              <h5>
-                If you are interested in joining the Guild and Competing on one
-                or more of these rosters, go to Celestials.gg and apply in the
-                WoW Section.
-              </h5>
-            </div>
-          </div>
-          <div class="row mt-4">
-            <div class="col text-center text-white">
-              <h5>
-                Celestials will be looking to expand into other games in the
-                near future so be on the lookout for any opportunities within
-                the Organization. Join our Discord and Follow our Social Media
-                by going to Celestials.GG to keep up to date and join any of our
-                current gaming teams.
-              </h5>
+              <div class="row mt-4 mb-3">
+                <div class="col">
+                  <h5 class="text-center text-white">
+                    Celestials is an up and coming eSports Organization that is
+                    focused on Competitive Gaming and creating Cutting Edge
+                    Content, Merchandise, and Community Events. Celestials was
+                    formed with the goal of Uniting Aspiring Content Creators
+                    with Competitive Mindsets. Celestials wants to become
+                    synonymous with a winning culture and quality content for
+                    our community. Celestials is going to compete in World of
+                    Warcraft Raiding, Mythic Plus, PvP, League of Legends, and
+                    Valorant.
+                  </h5>
+                </div>
+              </div>
+              <div class="row mt-4">
+                <div class="col">
+                  <h5 class="text-center text-white">
+                    World of Warcraft: Dragonflight is launching on Nov 28th and
+                    Celestials Guild is recruiting! We are looking for
+                    outstanding players in the following Categories:
+                  </h5>
+                </div>
+              </div>
+              <div class="row mt-3">
+                <div class="row">
+                  <div class="col text-center text-white">
+                    <h5>Mythic Raiding</h5>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col text-center text-white">
+                    <h5>Mythic Plus</h5>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col text-center text-white">
+                    <h5>3v3 Arena</h5>
+                  </div>
+                </div>
+              </div>
+              <div class="row mt-4">
+                <div class="col text-center text-white">
+                  <h5>
+                    If you are interested in joining the Guild and Competing on
+                    one or more of these rosters, go to Celestials.gg and apply
+                    in the WoW Section.
+                  </h5>
+                </div>
+              </div>
+              <div class="row mt-4">
+                <div class="col text-center text-white">
+                  <h5>
+                    Celestials will be looking to expand into other games in the
+                    near future so be on the lookout for any opportunities
+                    within the Organization. Join our Discord and Follow our
+                    Social Media by going to Celestials.GG to keep up to date
+                    and join any of our current gaming teams.
+                  </h5>
+                </div>
+              </div>
             </div>
           </div>
         </div>
