--- a/index.html
+++ b/index.html
@@ -225,10 +225,16 @@
 
       <a href="tournaments.html">
         <div
-          id="tournament-image"
-          style="height: 100vh"
+          id="about-us-image"
+          style="height: 115vh"
           class="container-fluid p-0 mb-0"
-        ></div>
+        >
+          <div class="row justify-content-center">
+            <div class="col-auto">
+              <img src="images/HOMEPAGE.png" class="img-fluid" alt="" />
+            </div>
+          </div>
+        </div>
       </a>
       <div class="container-fluid mt-5">
         <div class="container">
