--- a/about.html
+++ b/about.html
@@ -243,61 +243,67 @@
               <div class="row mt-4 mb-3">
                 <div class="col">
                   <h5 class="text-center text-white">
-                    Celestials is an up and coming eSports Organization that is
-                    focused on Competitive Gaming and creating Cutting Edge
-                    Content, Merchandise, and Community Events. Celestials was
-                    formed with the goal of Uniting Aspiring Content Creators
-                    with Competitive Mindsets. Celestials wants to become
-                    synonymous with a winning culture and quality content for
-                    our community. Celestials is going to compete in World of
-                    Warcraft Raiding, Mythic Plus, PvP, League of Legends, and
-                    Valorant.
+                    Celestials is an up and coming eSports organization that is
+                    focused on competitive gaming and creating exceptional
+                    content, merchandise, and community events. Celestials was
+                    formed with the goal of uniting aspiring content creators
+                    with competitive mindsets. We want to become synonymous with
+                    a winning culture and quality content for our community.
+                    Celestials started as a World of Warcraft guild that
+                    competes in mythic and heroic raiding, mythic+, and PvP.
                   </h5>
                 </div>
               </div>
               <div class="row mt-4">
                 <div class="col">
                   <h5 class="text-center text-white">
-                    World of Warcraft: Dragonflight is launching on Nov 28th and
-                    Celestials Guild is recruiting! We are looking for
-                    outstanding players in the following Categories:
+                    World of Warcraft: Dragonflight is launching November 28th,
+                    and &lt;Celestials Guild&gt; on Illidan is recruiting! We
+                    are looking for outstanding players in the following
+                    categories:
                   </h5>
                 </div>
               </div>
               <div class="row mt-3">
                 <div class="row">
                   <div class="col text-center text-white">
-                    <h5>Mythic Raiding</h5>
+                    <h5>&#x2022; Mythic Raiding,</h5>
                   </div>
                 </div>
                 <div class="row">
                   <div class="col text-center text-white">
-                    <h5>Mythic Plus</h5>
+                    <h5>&#x2022; Heroic Raiding,</h5>
                   </div>
                 </div>
                 <div class="row">
                   <div class="col text-center text-white">
-                    <h5>3v3 Arena</h5>
+                    <h5>&#x2022; Mythic Plus,</h5>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col text-center text-white">
+                    <h5>&#x2022; 3v3 Arena.</h5>
                   </div>
                 </div>
               </div>
               <div class="row mt-4">
                 <div class="col text-center text-white">
                   <h5>
-                    If you are interested in joining the Guild and Competing on
-                    one or more of these rosters, go to Celestials.gg and apply
-                    in the WoW Section.
+                    If you are interested in joining the guild and competing on
+                    one (or more) of these rosters, please go to Celestials.gg
+                    and find out how to apply by selecting WoW.
                   </h5>
                 </div>
               </div>
               <div class="row mt-4">
                 <div class="col text-center text-white">
                   <h5>
-                    Celestials will be looking to expand into other games in the
-                    near future so be on the lookout for any opportunities
-                    within the Organization. Join our Discord and Follow our
-                    Social Media by going to Celestials.GG to keep up to date
-                    and join any of our current gaming teams.
+                    Our community has recently branched out into League of
+                    Legends, and Valorant and will be looking to expand into
+                    other games in the near future. There are endless
+                    opportunities within our organization so, join our Discord
+                    and follow our social media by going to, Celestials.gg to
+                    keep up to date and join any of our current gaming teams
                   </h5>
                 </div>
               </div>
