--- a/index.html
+++ b/index.html
@@ -223,19 +223,21 @@
         </div>
       </nav>
 
-      <a href="tournaments.html">
-        <div
-          id="about-us-image"
-          style="height: 115vh"
-          class="container-fluid p-0 mb-0"
-        >
-          <div class="row justify-content-center">
-            <div class="col-auto">
-              <img src="images/HOMEPAGE.png" class="img-fluid" alt="" />
+      <div class="container-fluid">
+        <a href="tournaments.html">
+          <div
+            id="about-us-image"
+            style="height: 115vh"
+            class="container-fluid p-0 mb-0"
+          >
+            <div class="row justify-content-center">
+              <div class="col-auto">
+                <img src="images/HOMEPAGE.png" class="img-fluid" alt="" />
+              </div>
             </div>
           </div>
-        </div>
-      </a>
+        </a>
+      </div>
       <div class="container-fluid mt-5">
         <div class="container">
           <iframe
