--- a/about.html
+++ b/about.html
@@ -222,11 +222,14 @@
           </ul>
         </div>
       </nav>
-      <div class="container-fluid" id="about-us-image" style="height: 115vh">
-        <div class="row justify-content-center h-100" style="margin: auto">
-          <div class="col-auto">
+      <div
+        class="container-fluid joemama joemama2 d-flex align-items-center justify-content-center"
+        id="about-us-image"
+      >
+        <div class="row">
+          <a class="p-0 mb-0 col-auto" href="tournaments.html">
             <img src="images/ABOUTUSPNG.png" class="img-fluid" alt="" />
-          </div>
+          </a>
         </div>
       </div>
       <div class="container-fluid" style="height: 950px" id="about-us-image">
