--- a/index.html
+++ b/index.html
@@ -222,22 +222,17 @@
           </ul>
         </div>
       </nav>
-
-      <div class="container-fluid">
-        <a href="tournaments.html">
-          <div
-            id="about-us-image"
-            style="height: 115vh"
-            class="container-fluid p-0 mb-0"
-          >
-            <div class="row justify-content-center">
-              <div class="col-auto">
-                <img src="images/HOMEPAGE.png" class="img-fluid" alt="" />
-              </div>
-            </div>
-          </div>
-        </a>
+      <div
+        class="container-fluid joemama joemama2 d-flex align-items-center justify-content-center"
+        id="about-us-image"
+      >
+        <div class="row">
+          <a class="p-0 mb-0 col-auto" href="tournaments.html">
+            <img src="images/HOMEPAGE.png" class="img-fluid" alt="" />
+          </a>
+        </div>
       </div>
+
       <div class="container-fluid mt-5">
         <div class="container">
           <iframe
