--- a/wow.html
+++ b/wow.html
@@ -270,7 +270,18 @@
       <div class="container-fluid pb-5" id="insert">
         <div class="container-lg"></div>
       </div>
+      <div
+        class="container-fluid pb-5 justify-content-center d-flex"
+        style="height: 90vh"
+      >
+        <iframe
+          width="82%"
+          height="100%"
+          src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSTb4_8M5nKOnKzKzvUidVFJRAlEU_cCqHXIGPb_WEeazV4VxUPmvbUUmBUGBUR5DgNP5eDT3gO1MRJ/pubhtml?widget=true&amp;headers=false"
+        ></iframe>
+      </div>
     </div>
+
     <div class="container-fluid pt-2" style="background-color: #181716">
       <div class="row justify-content-center margin-auto">
         <div class="col-auto">
