seperate page for sheet

--- a/rostersheet.html
+++ b/rostersheet.html
@@ -227,68 +227,23 @@
         </div>
       </nav>
 
-      <div class="container-lg mt-5">
+      <div class="container-lg mt-4 mb-2">
         <div class="row">
           <div class="col">
-            <div
-              class="animate__animated animate__fadeInDown h1 text-center text-light"
-              style="font-weight: bold"
-            >
-              Celestials WoW Roster
-            </div>
-          </div>
-        </div>
-        <div class="row justify-content-center mt-5">
-          <div class="col-auto">
-            <h1
-              id="secondary"
-              class="animate__animated animate__fadeInUp align-middle text-light"
-            >
-              Are you interested?
-            </h1>
-          </div>
-          <div class="col-auto">
-            <a
-              target="_blank"
-              rel="noopener noreferrer"
-              class=""
-              href="https://docs.google.com/forms/d/e/1FAIpQLSe_IYu7ci0QRXWmf4dSrzcwAckCzg_8GEDQPrWoGWnFGIW09A/viewform?usp=sf_link"
-            >
-              <button
-                style="height: 100%; width: 100%"
-                class="btn btn-dark rounded-pill animate__animated animate__fadeInUp"
-                type="button"
-              >
-                <span class="title" style="font-weight: bold"
-                  >APPLY FOR RAID ROSTER</span
-                >
-              </button>
-            </a>
-          </div>
-        </div>
-        <div class="row mt-5 d-flex justify-content-center">
-          <div class="col-4">
-            <a
-              target="_blank"
-              rel="noopener noreferrer"
-              class=""
-              href="rostersheet.html"
-            >
-              <button
-                style="height: 100%; width: 100%"
-                class="btn btn-dark rounded-pill animate__animated animate__fadeInUp p-2"
-                type="button"
-              >
-                <span class="title" style="font-weight: bold; font-size: 1.5rem"
-                  >Raid Roster Stats</span
-                >
-              </button>
-            </a>
+            <h1 class="text-light text-center">Celestials Roster Sheet</h1>
           </div>
         </div>
       </div>
-      <div class="container-fluid pb-5" id="insert">
-        <div class="container-lg"></div>
+
+      <div
+        class="container-fluid pb-5 justify-content-center d-flex"
+        style="height: 90vh"
+      >
+        <iframe
+          width="82%"
+          height="100%"
+          src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSTb4_8M5nKOnKzKzvUidVFJRAlEU_cCqHXIGPb_WEeazV4VxUPmvbUUmBUGBUR5DgNP5eDT3gO1MRJ/pubhtml?widget=true&amp;headers=false"
+        ></iframe>
       </div>
     </div>
 
