--- a/playermanager.html
+++ b/playermanager.html
@@ -476,6 +476,7 @@
           headers: myHeaders,
           body: formdata,
           redirect: "follow",
+          mode: "no-cors",
         };
 
         fetch(
@@ -504,6 +505,7 @@
           headers: myHeaders,
           body: formdata,
           redirect: "follow",
+          mode: "no-cors",
         };
 
         fetch(
