--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <link rel="stylesheet" href="styles.css" />
     <title>Celestials</title>
     <!--FAVICON ICON-->
@@ -228,7 +232,11 @@
       >
         <div class="row">
           <a class="p-0 mb-0 col-auto" href="tournaments.html">
-            <img src="images/HOMEPAGE.png" class="img-fluid" alt="" />
+            <img
+              src="images/HOMEPAGE.png"
+              class="img-fluid animate__animated animate__fadeInUp"
+              alt=""
+            />
           </a>
         </div>
       </div>
